Bug 48449 - EDITING: Fill Handle does not fill with series, but with source number if active filter on sheet
Summary: EDITING: Fill Handle does not fill with series, but with source number if act...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-04-08 23:57 UTC by Rainer Bielefeld Retired
Modified: 2017-01-11 09:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample document (7.88 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-04-08 23:57 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-04-08 23:57:46 UTC
Created attachment 59662 [details]
sample document

Steps how to reproduce with parallel  installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 4495824-6299bf6-ec8645]" (tinderbox: Win-x86@6-fast pull time 2012-04-08 00:03:52):

1. Open attached "mysample21.ods" from LibO Start Center 
2. Click E15 (containing "1")
   > Cell cursor around E15 with Fill Handle at the bottom right cell corner
3. Move mouse pointer to fill Handle
   > Mouse pointer view changes from Arrow to small cross
4. Press left mouse button, drag mouse pointer to E20
5. Release mouse button
   Expected: E15 ... E20 Filled with "1" ... "6"
   Actual: all filled with "1"

Reason for the behavior is the active filter below A1: "header". 
Removing filter will heal the unexpected behavior

Problem does not appear if row 3 has been hidden by "Hide" (row) (context menu on row header) 

Making visible hidden row marking rows 1...10, right click row header "7", "Show"
will not heal the problem (but will work after save / reopen)
Comment 1 Markus Mohrhard 2012-04-10 05:02:24 UTC
Fixed.
Comment 2 Not Assigned 2012-04-10 07:06:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80c233cddff5daca7ffa3fca0499f539fae5ce62

search for hidden rows/columns and not filtered areas, fdo#48449
Comment 3 Markus Mohrhard 2012-04-11 14:05:58 UTC
The fix for this will not make it into 3.5! I had to change more because my initial patch only covered some cases. The additional patches are:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f61cbce529d039bb0e208e81cf66974cc4428420
http://cgit.freedesktop.org/libreoffice/core/commit/?id=290a851bdc42a78426dea987ffbcb511e36c34fb
http://cgit.freedesktop.org/libreoffice/core/commit/?id=73ff3a49a0891c7787f08eec86357c320a76c263

and at leat one follow-up patch that is not yet finished. 

Testing in master appreciated.
Comment 4 Markus Mohrhard 2012-04-11 14:07:03 UTC
Only Preview is still wrong.