search for hidden rows/columns and not filtered areas, fdo#48449